--- a/translation/data/zh.json
+++ b/translation/data/zh.json
@@ -101,58 +101,58 @@
   "page.about.section.our-mission.section-header.image.alt-text": {
     "message": "我们的使命"
   },
-  "page.about.section.our-mission.subsection-1.content": {
+  "page.about.section.our-mission.subsection-0.paragraph": {
     "message": "为了确定项目、活动和我们整体工作的有效性，需要跟踪和收集有意义的数据。我们坚信，数据驱动的运动将加速和提升我们的工作，这就是为什么我们优先考虑识别、收集和分析数据，并将其提供给他人。"
   },
-  "page.about.section.our-mission.subsection-1.heading": {
+  "page.about.section.our-mission.subsection-0.heading": {
     "message": "1.我们的运动需要更多的数据。"
   },
-  "page.about.section.our-mission.subsection-2.content": {
+  "page.about.section.our-mission.subsection-1.paragraph": {
     "message": "我们坚信，竞争不仅是健康的，而且对于提高我们运动的效率至关重要。竞争会给组织和项目带来健康的压力，促使其不断改进和迭代--这也会给我们提供更多信息，让我们知道什么是有效的。"
   },
-  "page.about.section.our-mission.subsection-2.heading": {
+  "page.about.section.our-mission.subsection-1.heading": {
     "message": "2.我们也需要更多的竞争。"
   },
-  "page.about.section.our-mission.subsection-3.content": {
+  "page.about.section.our-mission.subsection-2.paragraph": {
     "message": "我们相信，运动有潜力在方法上更具创新性。我们提倡打破常规思维，并将创新作为我们工作和流程每个部分的核心考虑因素。"
   },
-  "page.about.section.our-mission.subsection-3.heading": {
+  "page.about.section.our-mission.subsection-2.heading": {
     "message": "3.我们需要更加创新。"
   },
-  "page.about.section.our-mission.subsection-4.content": {
+  "page.about.section.our-mission.subsection-3.paragraph": {
     "message": "我们旨在帮助组织和个人以更有意义的方式进行联系与合作。我们需要利用我们的知识和相互之间的网络来支持我们的共同目标，无论是共享研究或数据、资源，还是相互支持以克服组织面临的挑战。"
   },
-  "page.about.section.our-mission.subsection-4.heading": {
+  "page.about.section.our-mission.subsection-3.heading": {
     "message": "4.我们需要开始合作。"
   },
-  "page.about.section.our-mission.subsection-5.content": {
+  "page.about.section.our-mission.subsection-4.paragraph": {
     "message": "世界上只有极少数人是素食主义者，其中一小部分人是积极的。许多组织鼓励非素食者出于健康、环境或道德原因采用素食主义。我们相信，我们也可以通过创造工具来帮助、激励更多的素食者成为动物的代言人。"
   },
-  "page.about.section.our-mission.subsection-5.heading": {
+  "page.about.section.our-mission.subsection-4.heading": {
     "message": "5.最后，我们需要更多的素食主义者积极行动起来。"
   },
   "page.about.section.our-story.next-seo.title": {
     "message": "我们的故事"
   },
-  "page.about.section.our-story.section-header.content": {
+  "page.about.section.our-story.intro.paragraph": {
     "message": "2019 年，我们与几名热衷于行动主义的志愿者一起启动了第一个项目。从那时起，我们已经成长为一个由高技能的专业软件工程师、设计师、数据科学家和内容创作者组成的社区，为运动提供支持。我们一开始就希望催化人们行动起来，激励他们成为动物的拥护者--我们始终坚持这一创始原则。我们的数字技能为我们的行动提供了动力。"
   },
-  "page.about.section.our-story.section-header.heading": {
+  "page.about.section.our-story.intro.heading": {
     "message": "我们的故事"
   },
-  "page.about.section.our-story.section-header.image.alt-text": {
+  "page.about.section.our-story.image.alt-text": {
     "message": "我们的故事"
   },
-  "page.about.section.our-story.subsection-1.content": {
+  "page.about.section.our-story.paragraph.0": {
     "message": "我们是 Vegan Hacktivists。我们的技能组合--无论是编写代码、创建品牌形象，还是分析数据--就像我们来自哪里、生活在哪里一样多种多样。我们相互协作，建立以数据为导向、具有实验性和有效性的项目。我们的核心团队由总监和高级团队成员组成，他们在工程、建筑、设计、数据、运营和沟通方面拥有丰富的经验和专业知识。我们的志愿者基础包括由负责人管理的团队；每个团队都拥有一个项目的所有权，并积极建设和维护该项目。"
   },
-  "page.about.section.our-story.subsection-2.content": {
+  "page.about.section.our-story.paragraph.1": {
     "message": "我们的组织以社区为先。鉴于我们的工作需要耐心和承诺，我们通过创造一个支持性的环境来激发志愿者的活力，使他们能够参与其中，提高效率和影响力。作为一个分布式组织，我们希望通过有意义和有趣的互动，建立一种价值观一致、相互联系的社区意识。每个团队都以一种<link>水果或蔬菜</link>为代表（将以植物为基础提升到另一个层次），我们通过游戏、聚会和社区电话来平衡我们的工作。毕竟，志愿者是我们组织的核心。"
   },
-  "page.about.section.our-story.subsection-3.content": {
+  "page.about.section.our-story.paragraph.2": {
     "message": "多年来，我们的组织随着运动的需要而变化。虽然我们现在主要专注于提供能力建设服务，但我们仍在继续开发我们认为具有创新性且在运动中非常需要的技术。现在，我们与倡导者、组织和前线工作者广泛合作，帮助他们改善日常运营、品牌和形象以及技术。通过这样做，我们帮助扩大他们的信息，将他们的工作推向更广泛的受众。"
   },
-  "page.about.section.our-story.subsection-4.content": {
+  "page.about.section.our-story.paragraph.3": {
     "message": "无论如何，我们的北极星始终如一：<no-localization>{break}</no-localization> ，我们是为了动物。"
   },
   "page.about.section.our-values.next-seo.title": {
@@ -167,40 +167,40 @@
   "page.about.section.our-values.section-header.image.alt-text": {
     "message": "我们的价值观"
   },
-  "page.about.section.our-values.subsection-1.content": {
+  "page.about.section.our-values.subsection-0.paragraph": {
     "message": "我们珍视并尊重所有动物的生命，谴责一切形式针对动物的暴力和剥削行为。我们相信动物有获得自由的权利，并通过我们的（数字）行动主义为之奋斗。"
   },
-  "page.about.section.our-values.subsection-1.heading": {
+  "page.about.section.our-values.subsection-0.heading": {
     "message": "动物解放"
   },
-  "page.about.section.our-values.subsection-2.content": {
+  "page.about.section.our-values.subsection-1.paragraph": {
     "message": "我们践行以爱为本，社区优先的组织方式。我们践行同理心、同情心和非暴力。我们鼓励每一位成员彼此坦诚、友好地交流。"
   },
-  "page.about.section.our-values.subsection-2.heading": {
+  "page.about.section.our-values.subsection-1.heading": {
     "message": "非暴力"
   },
-  "page.about.section.our-values.subsection-3.content": {
+  "page.about.section.our-values.subsection-2.paragraph": {
     "message": "我们相信，无论种族、性别、物种、年龄、性取向或政治派别如何，我们都能建立和培育安全、包容的社区。我们努力使我们所服务和工作的社区具有多样性和代表性。"
   },
-  "page.about.section.our-values.subsection-3.heading": {
+  "page.about.section.our-values.subsection-2.heading": {
     "message": "安全社区"
   },
-  "page.about.section.our-values.subsection-4.content": {
+  "page.about.section.our-values.subsection-3.paragraph": {
     "message": "我们认为养殖动物最需要我们的支持，这也是我们作为一个组织主要关注养殖动物解放的原因。"
   },
-  "page.about.section.our-values.subsection-4.heading": {
+  "page.about.section.our-values.subsection-3.heading": {
     "message": "养殖动物"
   },
-  "page.about.section.our-values.subsection-5.content": {
+  "page.about.section.our-values.subsection-4.paragraph": {
     "message": "我们重视来自每个人的不同观点和建设性反馈。我们相信每个人都能为讨论做出有价值的贡献。我们总是首先倾听，然后做出建设性的回应。"
   },
-  "page.about.section.our-values.subsection-5.heading": {
+  "page.about.section.our-values.subsection-4.heading": {
     "message": "公开反馈"
   },
-  "page.about.section.our-values.subsection-6.content": {
+  "page.about.section.our-values.subsection-5.paragraph": {
     "message": "我们不支持或助长对任何群体的剥削或压迫。我们认为，对人类和非人类动物的压迫是相互关联的，必须努力消除一切形式的压迫。"
   },
-  "page.about.section.our-values.subsection-6.heading": {
+  "page.about.section.our-values.subsection-5.heading": {
     "message": "反压迫"
   },
   "page.blog.next-seo.title": {
